    - [space-exploration] (recipe) Payloader:
      - changed assembling-machine-3 to space-assembling-machine
      - changed concrete to refined-concrete
      - increased default processing-unit amount, 4 -> 12
      - increased default low-density-structure amount, 4 -> 12
      - increased default se-heat-shielding amount, 4 -> 12
  Misc:
    - Added 'item-with-label', 'item-with-tags', 'item-with-inventory', and 'armor' types as valid item types for user defined configurable recipes (the startup setting recipes)
    - Fixed payload delivery "randomness" favoring the north-west, again..
      - Payload distribution should feel more random/even
    - Ammo "subgroups" are now programatically found/added
      - i.e. the "filter" of which items are allowed in a payload-vehicle
      - Should allow for additional non "ammo"|"capsule" type ammo or capsules to be allowed as payload items without manual updates
        - Previously was hard-coded per mod, as compatibility issues were found
    - Payloader "add" and "remove" recipes should now both be selectable from the signal GUI
      - Can ~technically~ "set" the recipe via a connected circuit-network signal, but is a bit awkward --[[ TODO: look into/improve this ]]
---------------------------------------------------------------------------------------------------
Version: 0.9.4
Date: 2026-02-02
  Bug Fixes:
    - Fixed startup error when accessing a nil value
    - Fixed railgun-ammo having no effect when used as a payload
    - Fixed payloads not delivering properly when fired at precisely the same position repeatedly
      - Namely, n+1 ready to launch circuit-controlled rocket-silos targeting the same position
  Compatibility:
    - [lily's-mm] (Lily's Micromissiles) should now load, if present, and added ammo available for payloads
  Misc:
    - Added configurable custom-input for giving an ICBM-remote
      - Default: SHIFT + ALT + T