@@ -4,7 +4,6 @@ local versions = {
     { major = 0, minor = 7, bug_fix = 0, },
     { major = 0, minor = 7, bug_fix = 1, },
     { major = 0, minor = 7, bug_fix = 4, },
-    { major = 0, minor = 9, bug_fix = 5, },
 }
 
 local return_val = {}
